--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -18,12 +18,13 @@
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label for="name" class="col-form-label">Name</label>
-                        <input type="text" th:name="name" class="form-control" id="name" placeholder="Name">
+                        <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Name">
+                        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger">Name Error</span>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="email" class="col-form-label">Email</label>
-                        <input type="text"  th:name="email" class="form-control" id="email" placeholder="Email">
-<!--                        <span th:if="${#fields.hasErrors('email')}" th:errors="${user.email}" class="text-danger"></span>-->
+                        <input type="text" th:field="*{email}" class="form-control" id="email" placeholder="Email">
+                        <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger">Email Error</span>
                     </div>
                 </div>
                 <div class="row">
